edit the html file

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>الأخلاق الحسنة زينة الإنسان وتاجٌ يُوضع على رأسه، وهي قناديل خيرٌ تُنير الدنيا، وتجعلها مشرقةً بالجمال والحب والأُلفة، فالأخلاق هي مصدر الخير كلّه، وهي الأساس في نموّ المجتمعات والأمم وازدهارها نحو الأفضل؛ لأنّها تُسهم في رقيّ الإنسان ورفعته نحو الأفضل، وبفضلها يُصبح المجتمع نقيًا من أيّ جرائم محتملة، ويسود فيه التكافل والحب، ويُصبح لكلّ شيء معنى أجمل.
-
-        </h1>
+<body><h1> new data </h1>
+        
     <script src="app.js"></script>
 </body>
 </html>
